# hoshi-lang

./: .gitignore  CMakeLists.txt  Hoshi.md  README.md  main.cpp
Backend/: Operand.cpp  Operand.hpp  Oprend.cpp  Oprend.hpp  Pass.hpp
Backend/Codegen/: AccessExpressionCodegen.cpp  AccessExpressionCodegen.hpp  AdditionExpressionCodegen.cpp  AdditionExpressionCodegen.hpp  AsExpressionCodegen.cpp  AsExpressionCodegen.hpp  AssignStmtCodegen.cpp  AssignStmtCodegen.hpp  BinaryExpressionCodegen.cpp  BinaryExpressionCodegen.hpp  BinaryMoveExpressionCodegen.cpp  BinaryMoveExpressionCodegen.hpp  BinaryShiftExpressionCodegen.cpp  BinaryShiftExpressionCodegen.hpp  BooleanExpressionCodegen.cpp  BooleanExpressionCodegen.hpp  Codegen.hpp  ExpressionCodegen.cpp  ExpressionCodegen.hpp  ExpressionStmtCodegen.cpp  ExpressionStmtCodegen.hpp  LiteralsCodegen.cpp  LiteralsCodegen.hpp  LogicComparingExpressionCodegen.cpp  LogicComparingExpressionCodegen.hpp  LogicEqualExpressionCodegen.cpp  LogicEqualExpressionCodegen.hpp  MuliplicationExpressionCodegen.cpp  MuliplicationExpressionCodegen.hpp  MultiplicationExpressionCodegen.cpp  MultiplicationExpressionCodegen.hpp  PrimaryCodegen.cpp  PrimaryCodegen.hpp  (+6 more)
Documents/: Runtime.md  Syntax.md
Frontend/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp
Share/: Config.cpp  Config.hpp  Git.cmake  HoshiException.cpp  HoshiException.hpp  Utils.cpp  Utils.hpp  Xqueue.cpp  Xqueue.hpp
Tests/: test.hoshi  testadd.hoshi  testas.hoshi  testassign.hoshi  testbinary.hoshi  testbinarymove.hoshi  testequ.hoshi  testiden.hoshi  testlogiccomparing.hoshi  testmul.hoshi
(+167 files in other folders)
